# opengl-phong-starwars

./: CMakeLists.txt  GLFW_Tie_Fighter.depend  GLFW_Tie_Fighter.layout  Makefile  README.md  README_BUILD.md  main.cpp  vcpkg.json
include/: HexPrism.h  HexagonalPrism.h
src/: Cube.cpp  Cylinder.cpp  Hexagon.cpp  HexagonalPrism.cpp  Mesh.cpp  Plate.cpp  Sphere.cpp  TieWing.cpp
